# DockerPlayground

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  docker-compose.linux.yml  docker-compose.windows.yml
.github/workflows/: ci.yml
apps/: demo.cpp
cmake/: ProjectOptions.cmake
docker/: Dockerfile
docker/linux/: Dockerfile
docker/windows/: Dockerfile
include/myproj/: vision.hpp
scripts/: ci-linux.sh  ci-windows.cmd  dev-shell-linux.sh
src/: vision.cpp
tests/: CMakeLists.txt  test_vision.cpp
